# phat-simple-lego

./: .gitignore  .gitmodules  DevPhase-inspect.txt  README.md  devphase.config.ts  package.json  rust-toolchain.toml  witness-build  witnessed-build
.github/workflows/: build.yaml
artifacts/lego/: lego.contract  lego.json  lego.wasm  metadata.json
artifacts/qjs/: metadata.json  qjs.contract  qjs.json  qjs.wasm
artifacts/sample_oracle/: metadata.json  sample_oracle.contract  sample_oracle.json  sample_oracle.wasm
contracts/lego/: Cargo.toml  lib.rs
contracts/lego/js/: package.json
contracts/lego/js/src/: index.ts
contracts/sample_oracle/: Cargo.toml  lib.rs
crates/js/: Cargo.toml  lib.rs
scripts/: read-log.js
tests/: legoActions.test.ts
typings/: Lego.ts  SampleOracle.ts
